force-app/main/default/objects/Privacy_Request__c/Privacy_Request__c.object-meta.xml
<CustomObject>
    <description
  >Object used for keeping record of all privacy requests such as right to delete, right to opt-out and right to know.  Used for CCPA compliance.</description>
    <label>Privacy Request</label>
    <nameField>
        <displayFormat>PR-{000}</displayFormat>
        <label>Privacy Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>