force-app/main/default/objects/Privacy_Request__c/fields/Affected_Records__c.field-meta.xml
<CustomField>
    <fullName>Affected_Records__c</fullName>
    <label>Affected Records</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>