force-app/main/default/objects/Privacy_Request__c/fields/Checklist_CMG_Do_Not_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Checklist_CMG_Do_Not_Call_List__c</fullName>
    <label>CMG Do Not Call List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>