force-app/main/default/objects/Privacy_Request__c/fields/Checklist_CMS__c.field-meta.xml
<CustomField>
    <fullName>Checklist_CMS__c</fullName>
    <label>CMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>