force-app/main/default/objects/Privacy_Request__c/fields/Checklist_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Checklist_HubSpot__c</fullName>
    <label>HubSpot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>