force-app/main/default/objects/Privacy_Request__c/fields/Checklist_Navigator_Industry_Insider__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Navigator_Industry_Insider__c</fullName>
    <label>Navigator/Industry Insider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Deleted from Navigator/Industry Insider</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Request Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>