force-app/main/default/objects/Privacy_Request__c/fields/Checklist_Referral_Factory__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Referral_Factory__c</fullName>
    <description
  >6/12/2025 LF: Deprecated. Removed from Process Request flow and Lightning Record Page Layout.</description>
    <label>Referral Factory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Confirmed OK to Cancel</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Request Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>