force-app/main/default/objects/Privacy_Request__c/fields/Checklist_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Subscriptions__c</fullName>
    <label>Subscriptions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Confirmed OK to Cancel</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Request Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>