force-app/main/default/objects/Privacy_Request__c/fields/Confirmation_Email_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent_By__c</fullName>
    <label>Confirmation Email Sent By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Mail Click Convert</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>