force-app/main/default/objects/Privacy_Request__c/fields/Confirmation_Method__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Method__c</fullName>
    <label>Confirmation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Privacy Vendor Portal</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>