force-app/main/default/objects/Privacy_Request__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description
  >Created for Ticket #81193 to allow visibility filter when contact is linked to Privacy Request record.</description>
    <formula>Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>