force-app/main/default/objects/Privacy_Request__c/fields/Corrected_Data__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Data__c</fullName>
    <label>Corrected Data</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>