force-app/main/default/objects/Privacy_Request__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description
  >Pre-populated by a flow for records created by the Privacy Request Site Guest User (Id: 0051O00000DEiE2QAL). 
Flow: [Privacy Request (Custom) - RT BS - Date Received] 
Ticket #80334</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>