force-app/main/default/objects/Privacy_Request__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact is unresponsive</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Identity Not Confirmed</fullName>
            </value>
            <value>
                <fullName>Not in Database</fullName>
            </value>
            <value>
                <fullName>Requested Data Twice in Past Twelve Months</fullName>
            </value>
            <value>
                <fullName>Request Withdrawn</fullName>
            </value>
            <value>
                <fullName>There is no data to correct</fullName>
            </value>
            <value>
                <fullName>Unable to Verify</fullName>
            </value>
            <value>
                <fullName>We do not store sensitive information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>