force-app/main/default/objects/Privacy_Request__c/fields/Denial_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason_Detail__c</fullName>
    <label>Denial Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>