force-app/main/default/objects/Privacy_Request__c/fields/Just_created_contact__c.field-meta.xml
<CustomField>
    <fullName>Just_created_contact__c</fullName>
    <label>Just created contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>