force-app/main/default/objects/Privacy_Request__c/fields/Need_to_create_new_contact__c.field-meta.xml
<CustomField>
    <fullName>Need_to_create_new_contact__c</fullName>
    <label>Need to create new contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>