force-app/main/default/objects/Privacy_Request__c/fields/No_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>No_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on creation of privacy requests from bulk imports. 
If checked, the internal email alert will not be sent on creation of the privacy request, and this checkbox will be cleared at the end of the flow.</description>
    <label>No Email Alert</label>
    <type>Checkbox</type>
</CustomField>