force-app/main/default/objects/Privacy_Request__c/fields/Privacy_Law__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Law__c</fullName>
    <label>Privacy Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA (CCPA)</fullName>
            </value>
            <value>
                <fullName>Colorado CPA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>NJ Daniel&apos;s Law</fullName>
            </value>
            <value>
                <fullName>Virginia CDPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>