force-app/main/default/objects/Privacy_Request__c/fields/Privacy_Status_Contact__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Status_Contact__c</fullName>
    <formula>TEXT (Contact__r.Privacy_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Privacy Status (Contact)</label>
    <type>Text</type>
</CustomField>