force-app/main/default/objects/Privacy_Request__c/fields/Privacy_Status_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Status_Date_Contact__c</fullName>
    <formula>Contact__r.Privacy_Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Privacy Status Date (Contact)</label>
    <type>Date</type>
</CustomField>