force-app/main/default/objects/Privacy_Request__c/fields/Privacy_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Vendor__c</fullName>
    <label>Privacy Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>