force-app/main/default/objects/Privacy_Request__c/fields/Request_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Verified_By__c</fullName>
    <label>Request Verified By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Physical Mail</fullName>
            </value>
            <value>
                <fullName>Cross-Referenced Database</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Verification Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>