force-app/main/default/objects/Privacy_Request__c/fields/Special_Processing__c.field-meta.xml
<CustomField>
    <fullName>Special_Processing__c</fullName>
    <formula>IF(TEXT(Privacy_Law__c) = &quot;NJ Daniel&apos;s Law&quot;,
&quot;NJ Daniel&apos;s Law applies to home addresses and phone numbers only&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Processing</label>
    <type>Text</type>
</CustomField>