force-app/main/default/objects/Privacy_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed – Cannot Verify Validity</fullName>
                <isActive>false</isActive>
                <label>Closed – Cannot Verify Validity</label>
            </value>
            <value>
                <fullName>Closed – Not a CA resident</fullName>
                <isActive>false</isActive>
                <label>Closed – Not a CA resident</label>
            </value>
            <value>
                <fullName
        >Closed – Not in database / Cannot provide copy of information</fullName>
                <isActive>false</isActive>
                <label
        >Closed – Not in database / Cannot provide copy of information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>