force-app/main/default/objects/Privacy_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-out of the sale of my information</fullName>
            </value>
            <value>
                <fullName>Request a copy of my personal information</fullName>
            </value>
            <value>
                <fullName>Erase my personal information</fullName>
            </value>
            <value>
                <fullName>Correct my personal information</fullName>
            </value>
            <value>
                <fullName
        >Limit the use of my sensitive personal information</fullName>
                <label
        >Limit the use of my sensitive personal information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>