force-app/main/default/objects/Privacy_Request__c/fields/Verification_Code_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code_Sent_Date__c</fullName>
    <label>Verification Code Sent Date</label>
    <type>Date</type>
</CustomField>