force-app/main/default/objects/Privacy_Request__c/listViews/Closed_Privacy_Requests.listView-meta.xml
<ListView>
    <fullName>Closed_Privacy_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed,Closed – Cannot Verify Validity</value>
    </filters>
    <label>Closed Privacy Requests</label>
</ListView>