force-app/main/default/objects/Privacy_Request__c/listViews/Copy_of_All_Privacy_Requests.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Privacy_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Organization__c</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Duplicate Request</value>
    </filters>
    <label>Duplicate Requests</label>
</ListView>