force-app/main/default/objects/Privacy_Request__c/listViews/Copy_of_Open_Privacy_Requests.listView-meta.xml
<ListView>
    <fullName>Copy_of_Open_Privacy_Requests</fullName>
    <columns>NAME</columns>
    <columns>Date_Received__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Notes__c</columns>
    <columns>Contact__c</columns>
    <columns>Privacy_Status_Contact__c</columns>
    <columns>Privacy_Status_Date_Contact__c</columns>
    <columns>Confirmation_Email_Send_Date__c</columns>
    <columns>Confirmation_Email_Sent_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Erase my personal information</value>
    </filters>
    <label>Open Privacy Requests - Delete My Data</label>
</ListView>