force-app/main/default/objects/Privacy_Request__c/listViews/Copy_of_Privacy_Queue_Bailey.listView-meta.xml
<ListView>
    <fullName>Copy_of_Privacy_Queue_Bailey</fullName>
    <columns>NAME</columns>
    <columns>Date_Received__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Notes__c</columns>
    <columns>Contact__c</columns>
    <columns>Privacy_Status_Contact__c</columns>
    <columns>Privacy_Status_Date_Contact__c</columns>
    <columns>Confirmation_Email_Send_Date__c</columns>
    <columns>Confirmation_Email_Sent_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Erase my personal information</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>notEqual</operation>
        <value>NJ,New Jersey</value>
    </filters>
    <filters>
        <field>Privacy_Law__c</field>
        <operation>notEqual</operation>
        <value>NJ Daniel&apos;s Law</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Privacy Queue - Deletions with Contact</label>
</ListView>