force-app/main/default/objects/Privacy_Request__c/listViews/Delete_Info_Privacy_Requests.listView-meta.xml
<ListView>
    <fullName>Delete_Info_Privacy_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Request a copy of my personal information</value>
    </filters>
    <label>Request Data Privacy Requests</label>
</ListView>